[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Environment/Items/000_0033_speed3.png" type="Texture" id=2]
[ext_resource path="res://Environment/Items/000_0017_star3.png" type="Texture" id=3]
[ext_resource path="res://Environment/Items/000_0032_speed4.png" type="Texture" id=4]
[ext_resource path="res://Environment/Items/000_0035_speed1.png" type="Texture" id=5]
[ext_resource path="res://Environment/Items/000_0031_speed5.png" type="Texture" id=6]
[ext_resource path="res://Environment/Items/000_0016_star4.png" type="Texture" id=7]
[ext_resource path="res://Environment/Items/000_0019_star1.png" type="Texture" id=8]
[ext_resource path="res://Environment/Items/000_0015_star5.png" type="Texture" id=9]
[ext_resource path="res://Environment/Items/000_0018_star2.png" type="Texture" id=10]
[ext_resource path="res://Environment/Items/000_0034_speed2.png" type="Texture" id=11]
[ext_resource path="res://Environment/Items/000_0045_coin.png" type="Texture" id=12]
[ext_resource path="res://Fonts/Berkahi Blackletter.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Environment/Items/000_0041_coin5.png" type="Texture" id=14]
[ext_resource path="res://Environment/Items/000_0040_coin6.png" type="Texture" id=15]
[ext_resource path="res://Environment/Items/000_0037_coin9.png" type="Texture" id=16]
[ext_resource path="res://Environment/Items/000_0039_coin7.png" type="Texture" id=17]
[ext_resource path="res://Environment/Items/000_0044_coin2.png" type="Texture" id=18]
[ext_resource path="res://Environment/Items/000_0038_coin8.png" type="Texture" id=19]
[ext_resource path="res://Environment/Items/000_0043_coin3.png" type="Texture" id=20]
[ext_resource path="res://Environment/Items/000_0042_coin4.png" type="Texture" id=21]
[ext_resource path="res://Environment/Items/000_0036_coin10.png" type="Texture" id=22]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.396078, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0980392, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.137255, 0.0156863, 0.0156863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0980392, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.156863, 0.156863, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.137255, 0.113725, 0.113725, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "Speed",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "Star",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 835.0
margin_top = 22.0
margin_right = 1013.0
margin_bottom = 43.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="CoinText" type="Label" parent="."]
margin_left = 962.0
margin_top = 62.0
margin_right = 1011.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 5 )
text = ":  0"

[node name="Label" type="Label" parent="."]
margin_left = 757.0
margin_top = 13.0
margin_right = 812.0
margin_bottom = 68.0
custom_styles/normal = SubResource( 3 )

[node name="PowerUp" type="AnimatedSprite" parent="."]
position = Vector2( 786, 41 )
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 4 )
animation = "Star"
playing = true

[node name="Coin" type="AnimatedSprite" parent="."]
position = Vector2( 945, 71 )
frames = SubResource( 6 )
